Fix spacing on header close image

--- a/imp/themes/default/dynamic/screen.css
+++ b/imp/themes/default/dynamic/screen.css
@@ -729,8 +729,6 @@ a.address:hover img {
 .headercloseimg {
     float: right !important;
     cursor: pointer;
-}
-#compose_close {
     margin-top: 6px;
 }
 
